--- a/src/styles/_blog.scss
+++ b/src/styles/_blog.scss
@@ -4,6 +4,7 @@
   max-width: 650px;
   @include mobile {
     margin-top: 0rem;
+    width: 100%;
     .blog-post:first-child h1 {
       margin-top: 0rem;
     }
@@ -38,6 +39,11 @@
     line-height: $prose-line-height;
     margin: 1.5rem 0rem;
       
+    img {
+      max-width: 720px;
+      width: 100%;
+      max-height: 360px;
+    }
     ol {
       @include mobile {
         padding-inline-start: 1rem;
